2006-01-27 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b5

 * Change: Added icons for rotate and flip.

 * Change: Layout of rotate_photo.php.
   Thanks to Volksport.

 * Change: Make black-random configurable in setup.

 * Change: Css changes to make Config-wizard a little smarter.

 * Change: Css files of skins can also now named .default.

2006-01-27 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b4

 * Fix: adminOtherChangesEmail was not working.
   Thanks to rbeuker from forums.

2006-01-23 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b3

 * Fix: setup/session_test.php didnt work correct with register globals off.

2006-01-22 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b2

 * Change: RFE #1193290
   Renamed $gallery->app->comments_display_name to $gallery->app->name_display (config Version bump)
   This is now used at most places. where a user is displayed.

 * Fix: Updated manifest.

2006-01-22 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b1

 * Fix: "move" and "copy" an item was restricted to admins.
	 Reverted to people who have permissions to edit an album.

2006-01-19 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b9

 * Change: "sanitize" fullname in new_password.php also.

 * Change: removed html/errorRow.inc, move this into lib/messages

2006-01-18 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b8

 * Security-Fix: Fullname for users was not sanitized.
                 Thus an unnince user could do a XSS injection
	         as the fullname is displayed when owner is displayed.
   Thanks to Peter Schumacher!

 * Fix: 'fitToWindow' was broken for Internet Explorer.
   Thanks to petorian from forum.

2006-01-17 Pierre-Luc Paour <paour@users.sourceforge.net>  1.5.2-RC3-cvs-b7

 * Fix: applets work again in Joomla-embeded mode. Thanks Mike Henin.

2006-01-13 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b6

 * Change: Added css for subalbumtree and tree element to have same appearance as in 1.5.1

2006-01-13 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b5
