@@ -22,7 +22,7 @@
 ?>
 <?php
 
-$gallery->version = '1.5.3-cvs-b5';
+$gallery->version = '1.5.3-cvs-b6';
 $gallery->config_version = 97;
 $gallery->album_version = 37;
 $gallery->user_version = 6;
