@@ -1,3 +1,7 @@
+2006-01-29 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b6
+
+ * Change: Just some code rearrange in albums.php
+
 2006-01-27 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b5
 
  * Change: Added icons for rotate and flip.
